--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
       </div>
       <script src="index.pack.js"></script>
    </body>
+   <!-- Just adding random text to the html page -->
 </html>
