--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
       </div>
       <script src="index.pack.js"></script>
    </body>
-   <!-- Just adding random text to the html page -->
+   <!-- Just adding something to ensure my streak remains in tack and I get a job ASAP -->
 </html>
