Add some valuable comments

--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
       </div>
       <script src="index.pack.js"></script>
    </body>
-   <!-- Just adding something to ensure my streak remains in tack and I get a job ASAP -->
+   <!-- Removing things so that my streak remains in tact -->
 </html>
